fix text alignment for mobile toggle label

--- a/packages/assets/scss/03-organisms/_organization-navigation.scss
+++ b/packages/assets/scss/03-organisms/_organization-navigation.scss
@@ -80,6 +80,7 @@ $menu-transition-time: 0.3s;
       max-width: 90%;
       margin-right: -1em;
       padding-right: 1em;
+      text-align: left;
 
       &::before {
         content: '...';
